swagger implementation fixes
