# docs/swagger.json
@@ -1,7 +1,10 @@
 {
+    "produces": [
+        "application/json"
+    ],
     "swagger": "2.0",
     "info": {
-        "description": "All endpoints return responses wrapped in a standard envelope: {\"success\": bool, \"data\": (schema shown per endpoint), \"error\": string}. All protected endpoints can return 401.",
+        "description": "All endpoints return responses wrapped in a standard envelope: {\"success\": bool, \"data\": (schema shown per endpoint), \"error\": string}. All protected endpoints can return 401 and most endpoints can return 500. These are not documented per endpoint. Be sure to \"Authorize\" within Swagger with a user which has API permissions within ez2boot - browser auth is only to view Swagger but it does not get passed in the basic auth header. Additionally, to access admin endpoints the user needs both API and Admin permissions.",
         "title": "ez2boot API",
         "contact": {},
         "version": "1.0"
@@ -15,7 +18,7 @@
                         "BasicAuth": []
                     }
                 ],
-                "description": "[Admin] modify a server session.",
+                "description": "[Admin] Override and modify an existing server session for any user.",
                 "consumes": [
                     "application/json"
                 ],
@@ -57,11 +60,85 @@
                         "BasicAuth": []
                     }
                 ],
-                "description": "[Admin] retrieve audit events",
+                "description": "[Admin] retrieve paginated list of audit events, filtered by actors, actions or time",
                 "tags": [
                     "audit"
                 ],
                 "summary": "Get audit events",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 50,
+                        "description": "Number of records to return",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "Cursor pagination token represented as a Unix timestamp",
+                        "name": "before",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "format": "email",
+                        "description": "Filter logs by the email of the actor",
+                        "name": "actor_email",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "format": "email",
+                        "description": "Filter logs by the email of the target user",
+                        "name": "target_email",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by action type (e.g., login, server_start)",
+                        "name": "action",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by impacted cloud resource ID",
+                        "name": "resource",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filter by event execution status (true/false)",
+                        "name": "success",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by failure reasons or details",
+                        "name": "reason",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search text within metadata payloads",
+                        "name": "metadata",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "Fetch events after this Unix timestamp",
+                        "name": "from",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "Fetch events before this Unix timestamp",
+                        "name": "to",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -95,12 +172,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/ldap.LdapConfigResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
                         }
                     }
                 }
